--- a/styles/style.css
+++ b/styles/style.css
@@ -42,7 +42,7 @@
 }
 
 .nav {
-    max-width: 1400px;
+    max-width: 1170px;
     height: 100px;
     margin: 0 auto;
     display: flex;
@@ -62,7 +62,7 @@
 
 .banner-section {
 
-    max-width: 1400px;
+    max-width: 1170px;
     height: 600px;
     margin: 0 auto;
     margin-top: 20px;
@@ -115,7 +115,7 @@
 /* popular section related styles */
 
 .popular-section {
-    max-width: 1400px;
+    max-width: 1170px;
     height: auto;
     margin: 100px auto 0;
 
@@ -127,7 +127,7 @@
 }
 
 .popular-text {
-    padding: 10px 100px 0 50px;
+    padding: 10px 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -154,6 +154,7 @@
 .popular-text li {
     width: 525px;
     padding-top: 16px;
+    padding-right: 60px;
 
 }
 
@@ -165,10 +166,10 @@
 /* destination section related styles */
 
 .destination-section {
-    border: 2px solid black;
-    max-width: 1400px;
+    max-width: 1170px;
     height: auto;
     margin: 100px auto 0;
+
 }
 
 .destination-text {
@@ -178,8 +179,181 @@
     align-items: center;
 }
 
+.destination-text h1 {
+    font-size: 2.5rem;
+    font-weight: 800;
+}
+
 .destination-text p {
     text-align: center;
     width: 640px;
     padding-top: 24px;
+    padding-bottom: 30px;
+}
+
+.first-destination-img-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    padding-bottom: 24px;
+    position: relative;
+
+}
+
+.maldives {
+    padding-right: 600px;
+    position: absolute;
+    color: white;
+    font-size: 1.5rem;
+}
+
+.indonesia {
+    padding-left: 600px;
+    position: absolute;
+    color: white;
+    font-size: 1.5rem;
+}
+
+.second-destination-img-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    padding-bottom: 24px;
+    position: relative;
+}
+
+.srilanka {
+    padding-right: 800px;
+    position: absolute;
+    color: white;
+    font-size: 1.5rem
+}
+
+.north-america {
+    padding-left: 100px;
+    position: absolute;
+    color: white;
+    font-size: 1.5rem;
+}
+
+.kashmir {
+    padding-left: 900px;
+    position: absolute;
+    color: white;
+    font-size: 1.5rem;
+
+}
+
+.third-destination-img-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    position: relative;
+}
+
+.bangladesh {
+
+    padding-top: 30px;
+    padding-right: 700px;
+    position: absolute;
+    color: white;
+    font-size: 1.5rem;
+}
+
+.bandarban {
+    padding-top: 30px;
+    padding-left: 500px;
+    position: absolute;
+    color: white;
+    font-size: 1.5rem;
+}
+
+/* why choose us section related styles */
+
+.why-choose-us-section {
+    border: 2px solid black;
+    max-width: 1170px;
+    height: auto;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.why-choose-us-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.why-choose-us-section h1 {
+    font-size: 2rem;
+    font-weight: 800;
+    padding-top: 100px;
+}
+
+.why-choose-us-section p {
+    width: 623px;
+    padding-top: 18px;
+    font-size: .9rem;
+    line-height: 1;
+}
+
+.why-choose-us-text p {
+    color: rgba(19, 19, 24, 0.70);
+    text-align: center;
+    font-family: Mulish;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    /* 162.5% */
+}
+
+.why-choose-us-card-container{
+    padding-top: 45px;
+}
+.first-row-card-content {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.card {
+    width: 573px;
+    height: 284px;
+    border-radius: 16px;
+    text-align: start;
+    padding-left: 32px;
+}
+
+.card h3 {
+    font-weight: 800;
+    padding-top: 32px;
+}
+
+.card p {
+    width: 480px;
+    color: #5A5A5D;
+    font-size: .9rem;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.card-1 {
+
+    border: 1px solid rgba(251, 181, 99, 0.20);
+    background: rgba(251, 181, 99, 0.05);
+
+}
+
+.card-2 {
+    border: 1px solid rgba(41, 206, 246, 0.20);
+    background: rgba(41, 206, 246, 0.05);
+}
+.card-3{
+    border: 1px solid rgba(251, 181, 99, 0.20);
+    background: rgba(251, 181, 99, 0.05);
+    margin: 24px auto 0;
 }
