--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,9 @@
 /* google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
 
+.hide{
+    display: none;
+}
 * {
     margin: 0;
     padding: 0;
