--- a/styles/style.css
+++ b/styles/style.css
@@ -23,11 +23,26 @@
     position: relative;
     font-size: 1.2rem;
     font-weight: 800;
+    cursor: pointer;
+}
+
+.btn-secondary {
+    width:120px;
+    height: 52px;
+    background: darkgray;
+    border: none;
+    border-radius: 8px;
+    color: white;
+    position: relative;
+    cursor: pointer;
+    font-size: 1rem;
 }
 
 .span-station {
     color: #FF5400;
 }
+
+
 
 
 /* navbar related styles */
@@ -88,7 +103,7 @@
 }
 
 .banner-container {
-    background-image: url("/Images/banner-Copy.png");
+    background-image: url("/Images/banner.png");
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 15px;
@@ -238,7 +253,7 @@
     line-height: 26px;
 }
 
-.destination-images h2{
+.destination-images h2 {
     font-size: 1.5rem;
 }
 
@@ -409,11 +424,14 @@
 
 /* premium packages related styles */
 
-/* .premium-section {
+.premium-section {
     width: 1170px;
-    height: 800px;
-    border: 2px solid black;
+    height: auto;
     margin: 100px auto auto;
+    background-color: aliceblue;
+    border-radius: 10px;
+
+
 }
 
 .premium-section .premium-content {
@@ -423,6 +441,7 @@
 .premium-content h1 {
     font-size: 2rem;
     font-weight: 900;
+    padding-top: 50px;
 }
 
 .premium-content p {
@@ -432,18 +451,144 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
-} */
+}
+
+
+.package-card {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+   
+}
+
+.packages-name {
+    background-color: white;
+    padding: 30px 30px;
+    margin: 30px 30px;
+    border-radius: 10px;
+    width: 500px;
+    height:auto;
+}
+
+.packages-name h1 {
+    font-size: 2rem;
+    font-weight: 800;
+    color:#5A5A5D;
+}
+
+.packages-name h3 {
+    background-color: rgba(255, 217, 0, 0.507);
+    width: 170px;
+    color:#5A5A5D;
+    margin: 0 auto;
+    padding: 20px;
+    margin-top: 10px;
+    margin-right: 30px;
+    font-size: 1.5rem;
+    font-weight: 800;
+}
+.premium-card1 .packages-name h3{
+    position: absolute;
+    margin-left: 350px;
+    margin-top: -150px;
+    transform: rotate(30deg);
+}
+.premium-card2 .packages-name h3{
+    position: absolute;
+    margin-left: 350px;
+    margin-top: -150px;
+    transform: rotate(30deg);
+}
+.premium-card2 .packages-name h3{
+    position: absolute;
+    margin-left: 350px;
+    margin-top: -150px;
+    transform: rotate(30deg);
+}
+.premium-card3 .packages-name h3{
+    position: absolute;
+    margin-left: 350px;
+    margin-top: -150px;
+    transform: rotate(30deg);
+}
+.premium-card4 .packages-name h3{
+    position: absolute;
+    margin-left: 350px;
+    margin-top: -150px;
+    transform: rotate(30deg);
+}
+
+.packages-name p {
+    color: #5A5A5D;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    margin: 20px;
+}
+
+.package-card img {
+    width: 500px;
+    height: auto;
+    padding-top: 20px;
+    margin: 30px 30px;
+    border-radius: 10px;
+    position: relative;
+    cursor: pointer;
+
+}
+
+.premium-card1,
+.premium-card2,
+.premium-card3,
+.premium-card4 {
+    text-align: center;
+    border-radius: 10px;
+    margin-top: 50px;
+}
+
+.premium-card1 h1,
+.premium-card2 h1,
+.premium-card3 h1,
+.premium-card4 h1 {
+    text-align: center;
+    border-radius: 10px;
+    margin-top: 50px;
+}
+.premium-link-icon{
+    font-size: 3rem;
+    color: black;
+    position: absolute;
+    
+    
+}
+
+.premium-card1 i{
+    margin-top: 150px;
+    margin-right:1200px;
+    border: 2px solid saddlebrown;
+}
+
 
 /* newsletter section related styles */
 
 .newsletter-section {
-    display: flex;
-    justify-content: space-between;
     max-width: 1170px;
     height: auto;
     margin: 0 auto;
     padding-top: 100px;
 
+}
+
+.newsletter-section h1{
+    font-size: 2rem;
+    font-weight: 800;
+    text-align: center;
+    margin: auto auto 50px;
+}
+
+.newsletter-container{
+    display: flex;
+    justify-content: space-between;
 }
 
 .newsletter-content {
