added more design in newsletter

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,6 +1,6 @@
 /* responsive styles for mobile device */
 
-@media screen and (max-width:576px;) {
+@media screen and (max-width:576px) {
    .nav {
       margin-top: -10px;
       max-width: 100%;
@@ -296,10 +296,16 @@
 
 
    /* newsletter section related styles for mobile devices */
+
+   .newsletter-section {
+      margin: 0 auto;
+   }
+
    .newsletter-container {
       width: 375px;
-      justify-content: center;
-      align-items: center;
+      display: flex;
+      flex-direction: column;
+      margin: 0 auto;
 
    }
 
