--- a/styles/style.css
+++ b/styles/style.css
@@ -95,7 +95,6 @@
     height: 600px;
     margin: 0 auto;
     margin-top: 20px;
-    background-color: linear-gradient(to bottom right, red, yellow);
     text-align: center;
     display: flex;
     justify-content: center;
@@ -103,7 +102,7 @@
 }
 
 .banner-container {
-    background-image: url("/Images/banner.png");
+    background-image: url('/Images/banner.png');
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 15px;
