--- a/styles/style.css
+++ b/styles/style.css
@@ -102,7 +102,7 @@
 }
 
 .banner-container {
-    background-image: url('/Images/banner.png');
+    background-image:url('../Images/banner.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -440,7 +440,7 @@
     display: flex;
     flex-direction: column;
     align-items: end;
-    background-image: url('/Images/Group\ 39.png');
+    background-image:url('../Images/Group-39.png');
 }
 .deal-card-content-2{
     margin-top: 50px;
@@ -448,7 +448,7 @@
     display: flex;
     flex-direction: column;
     align-items: end;
-    background-image: url('/Images/Group\ 39.png');
+    background-image: url('../Images/Group-40.png');
 }
 
 .deal-card-content-2{
@@ -457,7 +457,7 @@
     display: flex;
     flex-direction: column;
     align-items: start;
-    background-image:url('/Images/Group\ 40.png')
+    background-image:url('../Images/Group-39.png')
 }
 
 
